completed stretch and styled it hella nice

--- a/gitcard/src/App.css
+++ b/gitcard/src/App.css
@@ -155,3 +155,11 @@ table {
     justify-content: space-around;
     align-items: center;
 }
+
+.active {
+    background: #6cc644;
+}
+
+a {
+    text-decoration: none;
+}
